--- a/src/_sass/_bulma_preload.scss
+++ b/src/_sass/_bulma_preload.scss
@@ -9,3 +9,5 @@
 @import "bulma/elements/content.sass";
 @import "bulma/elements/button.sass";
 @import "bulma/components/card";
+@import "bulma/components/navbar";
+
