--- a/src/public/css/preload_styles.scss
+++ b/src/public/css/preload_styles.scss
@@ -18,45 +18,82 @@
 }
 
 // Import Sass Bulma.io CSS Framework
-$content-heading-line-height: 1.3; 
+$content-heading-line-height: 1.3;
 
 $is-size-4: 1.4rem;
 
-@import 'bulma_preload';
-body{
+@import "bulma_preload";
+body {
   color: #000;
 }
 
-.post-container{
+.container {
   margin: 0 auto;
-  max-width: 42rem;
-}
-
-.page-container{
-  margin: 0 auto;
+  position: relative;
   max-width: 60rem;
 }
 
-h1,h2,h3, .title, .logo
-{
-    font-family: 'Prompt', sans-serif;
-    font-weight: 400;
-    // font-family: 'supermarket', Helvetica, Arial, sans-serif;
+// @media screen and (min-width: 1088px) {
+//   .container {
+//     max-width: 60rem;
+//     width: 60rem;
+//   }
+// }
+
+// @media screen and (min-width: 1280px) {
+//   .container {
+//     max-width: 1152px;
+//     width: 1152px;
+//   }
+// }
+
+// @media screen and (min-width: 1472px) {
+//   .container {
+//     max-width: 1344px;
+//     width: 1344px;
+//   }
+// }
+
+// .post-container {
+//   margin: 0 auto;
+//   max-width: 42rem;
+// }
+
+
+.page-container {
+  margin: 0 auto;
+  max-width: 60rem;
+  padding: 1.5em;
 }
 
-.title{
-  line-height: 1.1; 
+h1,
+h2,
+h3,
+h4,
+.title,
+.logo {
+  font-family: "Prompt", sans-serif;
+  font-weight: 400;
+  // font-family: 'supermarket', Helvetica, Arial, sans-serif;
+}
+
+.title {
+  line-height: 1.1;
   font-weight: 500;
 }
 
 .content {
-  
-  h1, h2, h3, h4, h5, h6{
-    font-family: 'Prompt', sans-serif;
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-family: "Prompt", sans-serif;
     font-weight: 600;
   }
 
-  h1.post-title{
+  h1.post-title {
     line-height: 1.1;
     font-weight: 600;
     margin-bottom: 0.33em;
@@ -70,101 +107,231 @@ h1,h2,h3, .title, .logo
   // h5{ font-size: 1.25rem; }
   // h6{ font-size: 1rem; }
   // scale 1.20
-  h1{ font-size: 2.074rem; }
-  h2{ font-size: 1.728rem; }
-  h3{ font-size: 1.266rem; }
-  h4{ font-size: 1.44rem; }
-  h5{ font-size: 1.20rem; }
+  h1 {
+    font-size: 2.074rem;
+  }
+  h2 {
+    font-size: 1.728rem;
+  }
+  h3 {
+    font-size: 1.266rem;
+  }
+  h4 {
+    font-size: 1.44rem;
+  }
+  h5 {
+    font-size: 1.2rem;
+  }
 
-  blockquote{
+  blockquote {
     padding: 1.25em 1.5em;
     border-left: 5px solid #000;
   }
 
-  .highlighter-rouge .highlight{
+  .highlighter-rouge .highlight {
     margin-bottom: 1em;
   }
 
-  @media (min-width: 0) and (max-width: $tablet) { 
-
-    blockquote{
+  @media (min-width: 0) and (max-width: $tablet) {
+    blockquote {
       margin-left: -1em;
     }
-    .highlighter-rouge .highlight{
+    .highlighter-rouge .highlight {
       margin-left: -0.5em;
       margin-right: -0.5em;
     }
     // scale 1.125
-    h1{ font-size: 1.602rem; }
-    h2{ font-size: 1.424rem; }
-    h3{ font-size: 1.266rem; }
-    h4{ font-size: 1.125rem; }
-    h5{ font-size: 1.25rem; }
+    h1 {
+      font-size: 1.602rem;
+    }
+    h2 {
+      font-size: 1.424rem;
+    }
+    h3 {
+      font-size: 1.266rem;
+    }
+    h4 {
+      font-size: 1.125rem;
+    }
+    h5 {
+      font-size: 1.25rem;
+    }
 
-    h1.post-title{
+    h1.post-title {
       font-size: 1.602rem;
     }
   }
 
-  h2:not(:first-child){
+  h2:not(:first-child) {
     margin-top: 2em;
   }
-  a, code{ @include word-wrap(); }
-  p{
+  a,
+  code {
+    @include word-wrap();
+  }
+  p {
     line-height: 1.75rem;
-    @media (min-width: $fullhd) {  
+    @media (min-width: $fullhd) {
       line-height: 2rem;
     }
   }
 
   .post-date {
     color: #666;
-    font-size:1.1rem;
+    font-size: 1.1rem;
   }
   // .tags{ }
-  .tag{
-    margin: 0.3rem 0.2rem; background-color: #eee; padding: 0.4em 0.6em;
+  .tag {
+    margin: 0.3rem 0.2rem;
+    background-color: #eee;
+    padding: 0.4em 0.6em;
     border-radius: 3px;
   }
 
-  .tag a{
+  .tag a {
     color: #444;
   }
 
-  p:not(:last-child){
-      margin-bottom: 0.8335em 0;
+  p:not(:last-child) {
+    margin-bottom: 0.8335em 0;
   }
 
-  ol, ul{
+  ol,
+  ul {
     li p:not(:last-child) {
       margin: 0.67em;
     }
   }
-    
 }
 
-code{
-  color:#333;
+.is-active {
+  display: inline !important;
 }
 
-.post-list a, a .title {
+.post-container-responsive {
+  padding: 1em;
+  margin: 0 auto;
+  max-width: 42rem;
+
+  @media (min-width: 971px) and (max-width: 1300px)  {
+    margin: 0 auto 0 300px;
+  }
+  // @media (min-width: 0) and (max-width: 1300px)  {
+  //   margin: 0 auto 0 300px;
+  // }
+}
+
+// work with sidebar
+
+/**
+* Create an invisible pseudo-element and make it the height of the
+* sticky navbar so the jump takes you to a location above the link
+*/
+:target:before {
+  content: "";
+  display: block;
+  margin-top: -80px;
+  height: 80px;
+  width: 1px;
+}
+
+.navbar-burger{
+  margin-left: 0;
+}
+
+.sidebar-main{
+  display: none;
+}
+
+.sidebar {
+  
+  height: 100%; /* Full-height: remove this if you want "auto" height */
+  width: 300px; /* Set the width of the sidebar */
+  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+  z-index: 99; /* Stay on top */
+  top: 0; /* Stay at the top */
+  left: 0;
+  border-right: 1px solid #eee;
+  background-color: #fff;
+  overflow-x: hidden; /* Disable horizontal scroll */
+  overflow-y: auto;
+  // padding: 1.5em;
+  padding: 5em 1.5em 1.5em 1.5em;
+
+  .sidebar-title {
+    // margin-bottom: 1.5em;
+    font-weight: 600;
+  }
+  .sidebar-menu{
+    border-bottom: 1px solid #eee;
+    padding-bottom: 1em;
+    margin-bottom: 1em;
+    a {
+      display: block; font-size:1.1rem;
+      color:black;
+      font-weight: 600;
+      margin-bottom: 0.5em;
+    }
+  }
+
+
+  ul li {
+    margin: 0.5em 0;
+    list-style-position: inside;
+    text-indent: -1em;
+    padding-left: 1em;
+  }
+  .sidebar-title a {
+    color: #333;
+  }
+  ul li a {
+    color: #333;
+    padding-bottom: calc(0.375em - 1px);
+    padding-left: 0.75em;
+    padding-right: 0.75em;
+    padding-top: calc(0.375em - 1px);
+  }
+  ul li a:hover {
+    color:#268bd2;
+    border-radius: 3px;
+  }
+}
+
+.header-fix {
+  background-color: #fff;
+  width: 100%;
+  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+  z-index: 100; /* Stay on top */
+  top: 0em; /* Stay at the top */
+  left: 0;
+  border-bottom: 1px solid #eee;
+  padding: 0.5em 0;
+}
+
+code {
+  color: #333;
+}
+
+.post-list a,
+a .title {
   color: #111;
 }
 
-.post-list a:hover, a:hover .title  {
+.post-list a:hover,
+a:hover .title {
   color: $blue;
 }
 
-
-.logo{
-  color:  #0D47A1;
+.logo, .logo a{
+  color: #0d47a1;
 }
 
-.recent-post a:hover{
+
+.recent-post a:hover {
   color: #ddd;
 }
 
-.space{
+.space {
   margin: 0.5rem 0;
   padding: 0;
 }
@@ -173,50 +340,49 @@ code{
   font-size: 1.05em;
 }
 
-.search-close a{
+.search-close a {
   color: #111;
   visibility: hidden;
   display: none;
-  @media (min-width: 0) and (max-width: $tablet) { 
+  @media (min-width: 0) and (max-width: $tablet) {
     visibility: visible;
     display: block;
   }
 }
 
-
-
-@media (min-width: 0) and (max-width: $tablet) { 
-.modal {
-  // display: none;
-  height: 100%;
-  left: 0;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  // open  
-  display: flex;
-  flex-direction: column;
-
-  &__header, &__content, &__footer{
-    background-color: #fff;
-    padding: 0 1rem;
-  }
-
-  &__header{
-    padding-top: 0.5rem;
-  }
-
-  &__content{
+@media (min-width: 0) and (max-width: $tablet) {
+  .modal {
+    // display: none;
     height: 100%;
-    overflow-y: auto;
-  }
-}
+    left: 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    // open
+    display: flex;
+    flex-direction: column;
 
+    &__header,
+    &__content,
+    &__footer {
+      background-color: #fff;
+      padding: 0 1rem;
+    }
+
+    &__header {
+      padding-top: 3.5rem;
+    }
+
+    &__content {
+      height: 100%;
+      overflow-y: auto;
+    }
+  }
 }
 
 // .search-overlay-parent
 // {
-// @media (min-width: 0) and (max-width: $tablet) {  
+// @media (min-width: 0) and (max-width: $tablet) {
 //     position: fixed;
 //     height : 100vh;
 //     width : 95vw;
@@ -224,14 +390,13 @@ code{
 //     left:0;
 //     z-index: 40;
 //     background-color: #fff;
-//     display: flex;       
+//     display: flex;
 //     overflow-y: auto;
 //   }
 // }
 
-
 // .search-overlay{
-//   @media (min-width: 0) and (max-width: $tablet) {  
+//   @media (min-width: 0) and (max-width: $tablet) {
 //     flex-grow : 1;
 //     width: 90%;
 //     position: relative;
@@ -241,38 +406,35 @@ code{
 
 // }
 
-
-
 // description
 
-.wrapper{
+.wrapper {
   display: flex;
   width: 100%;
 }
 
-.description{
-  margin: 0.25rem 0 0 0; 
+.description {
+  margin: 0.25rem 0 0 0;
   color: #999;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 
-  @media (max-width: $tablet) {  
+  @media (max-width: $tablet) {
     width: 500px;
   }
 
-  @media (min-width: $tablet) and (max-width: $desktop) {  
+  @media (min-width: $tablet) and (max-width: $desktop) {
     width: 500px;
   }
 
-  @media (min-width: $desktop) and (max-width: $fullhd) {  
+  @media (min-width: $desktop) and (max-width: $fullhd) {
     width: 500px;
-   }
+  }
 
-   @media (min-width: $fullhd)  {  
+  @media (min-width: $fullhd) {
     width: 700px;
-   }
-
+  }
 }
 
 // .description{
@@ -282,15 +444,14 @@ code{
 //   text-overflow: ellipsis;
 // }
 
-
 // Tag
-.tag a{
+.tag a {
   color: #999;
 }
 
-.tags{
- margin: 0; 
- padding: 0;
+.tags {
+  margin: 0;
+  padding: 0;
 }
 
 .tag {
@@ -299,7 +460,7 @@ code{
 
 // placeholder image
 
-.image{
+.image {
   margin: 2rem 0;
 }
 
@@ -309,7 +470,6 @@ code{
   background-repeat: no-repeat;
   position: relative;
   overflow: hidden;
-
 }
 
 .placeholder img {
@@ -331,16 +491,15 @@ code{
   transform: scale(1);
 }
 
-
 // header
-.hr-header{
+.hr-header {
   margin-top: 0rem;
 }
 
 // first page
 
-.image-cover{
-  padding:0rem;
+.image-cover {
+  padding: 0rem;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -349,9 +508,9 @@ code{
   background-repeat: no-repeat;
 }
 
-.image-load-placeholder{
+.image-load-placeholder {
   // https://ce8be7dec.cloudimg.io/width/80/fgaussian2/https://www.dropbox.com/s/3qn79g1jnrhat0h/2018-08-13-%E0%B8%A3%E0%B8%B9%E0%B9%89%E0%B8%88%E0%B8%B1%E0%B8%81%E0%B8%81%E0%B8%B1%E0%B8%9A%E0%B8%90%E0%B8%B2%E0%B8%99%E0%B8%82%E0%B9%89%E0%B8%AD%E0%B8%A1%E0%B8%B9%E0%B8%A5%E0%B8%AD%E0%B8%99%E0%B8%B8%E0%B8%81%E0%B8%A3%E0%B8%A1%E0%B9%80%E0%B8%A7%E0%B8%A5%E0%B8%B2%20OpenTSDB%20%E0%B8%81%E0%B8%B1%E0%B8%99%E0%B9%80%E0%B8%96%E0%B8%AD%E0%B8%B0-cover2.jpeg?raw=1
-  padding:0rem;
+  padding: 0rem;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -361,118 +520,112 @@ code{
 }
 
 // recents posts
-.recent-posts-2{
-  padding:0em;
+.recent-posts-2 {
+  padding: 0em;
   min-width: 250px;
 }
 
-.recent-posts-size-2{
+.recent-posts-size-2 {
   height: 150px;
   // border-radius: 7.5px;
- 
-//   @media (min-width: $tablet) and (max-width: $desktop)  {  
-//     height: 150px;
-//    }
 
-//  @media (min-width: $desktop) {  
-//   height: 150px;
-//  }
+  //   @media (min-width: $tablet) and (max-width: $desktop)  {
+  //     height: 150px;
+  //    }
+
+  //  @media (min-width: $desktop) {
+  //   height: 150px;
+  //  }
 }
 
-.recent-posts{
-  background-color: #333; 
-  padding:0rem;
+.recent-posts {
+  background-color: #333;
+  padding: 0rem;
   min-width: 250px;
 }
 
-.recent-post a, .recent-post{ 
+.recent-post a,
+.recent-post {
   color: $white;
   margin-bottom: 0.3rem;
 }
 
-.recent-posts-overlay{
+.recent-posts-overlay {
   position: relative;
-  height: 100%; 
-  padding:1.3rem;
+  height: 100%;
+  padding: 1.3rem;
   background-color: rgba(0, 0, 0, 0.6);
 }
 
-.recent-posts-size{
+.recent-posts-size {
   height: 200px;
- 
-  // @media (min-width: $tablet) {  
+
+  // @media (min-width: $tablet) {
   //   min-height: px;
   //  }
 
- @media (min-width: $desktop) {  
-  height: 280px;
- }
+  @media (min-width: $desktop) {
+    height: 280px;
+  }
 }
-
 
 // end first page
 
-.user-link{
+.user-link {
   color: #4a4a4a;
   margin: 8px;
 }
 
-
-
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-.pagination-item{
-  margin-right:1rem;
+.pagination-item {
+  margin-right: 1rem;
 }
 
 html {
-    height: 100%;
+  height: 100%;
 }
 
 body {
-    margin: 0;
-    padding: 15px;
+  margin: 0;
+  padding: 15px;
 }
 
 .highlighted {
-  background-color: yellow; 
-  }
-
-
+  background-color: yellow;
+}
 
 // header
-.button .is-white{
+.button .is-white {
   color: $grey-dark;
 }
 
-.menu-link a{
-  // color: $grey-dark;  
+.menu-link a {
+  // color: $grey-dark;
   margin-right: 0.3rem;
   margin-top: 0.45rem;
-  // line-height: 3.3;  
+  // line-height: 3.3;
   text-transform: lowercase;
 }
 .active {
   font-weight: bold;
 }
 
-.menu-link a:hover{
+.menu-link a:hover {
   color: $blue;
 }
 
-
-img[class=post-cover]{
-  max-height: 300px; 
+img[class="post-cover"] {
+  max-height: 300px;
   width: 100%;
-  object-fit: cover ;
+  object-fit: cover;
 }
 
-img[class=post-list]{
-  max-height: 200px; 
+img[class="post-list"] {
+  max-height: 200px;
   max-width: 100%;
-
 }
 
 // postload
@@ -481,33 +634,30 @@ img[class=post-list]{
   margin: 0.7rem;
 }
 
-
-
-.card{
-  margin:1rem;
+.card {
+  margin: 1rem;
   padding: 0.3rem;
   border-radius: 5px;
 }
 
-.card-content{
+.card-content {
   padding: 0.7rem;
 }
 
-.box{
+.box {
   box-shadow: none;
-  padding: .9rem;
+  padding: 0.9rem;
 }
 
-.content blockquote{
+.content blockquote {
   background-color: $white;
   font-style: italic;
   color: $grey;
 }
 
-.footer{
+.footer {
   background-color: transparent;
 }
-
 
 /* Related posts */
 .related {
@@ -532,5 +682,3 @@ img[class=post-list]{
 .related-posts li a:hover small {
   color: inherit;
 }
-
-
