--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -1,15 +1,17 @@
-<div class="page-container">
+<!-- 
+    <header class="header-fix">
+        <div class="page-container">
+        <div class="columns is-mobile">
+          <div class="column is-narrow">
+              <a class="button is-white" href="#" style="margin-top: 0.45rem; display: inline-block">
+                <i class="fas fa-bars"></i>
+              </a>
 
-        <div class="columns">
-          <div class="column is-2">
-            <div class="logo is-size-3 has-text-centered-mobile is-size-4-mobile">
-              <a href="/" >mildronize</a>
-              <small></small>
-
-            </div>
-
+              <div class="logo is-size-4" style="margin-top: 0.4rem; display: inline-block">
+                  <a href="/" >mildronize</a>
+                </div>
           </div>
-          <div class="column has-text-right has-text-centered-mobile">
+          <div class="column has-text-right">
               {% assign pages_list = site.pages %}
               {% for node in pages_list %}
                 {% if node.title != null %}
@@ -18,17 +20,93 @@
                   {% endif %}
                 {% endif %}
               {% endfor %}
-              <!-- <span class="menu-link"><a href="/about" >about</a></span>
-              <span class="menu-link"><a href="/project" >project</a></span>
-              <span class="menu-link"><a href="/" >blog</a></span> -->
+    
               <span class="is-size-5 menu-link{% if page.url contains 'tags' %} active{% endif %}"><a  class="button is-white" href="/tags/">tag</a></span>
               <span class="is-size-5 menu-link{% if page.url contains 'blog' %} active{% endif %}"><a  class="button is-white" href="/blog/">blog</a></span>
               <span class="menu-link is-size-6"><a class="button is-white" href="/search/"><i class="fas fa-search 2x"></i></a></span>
           </div>
-          <!-- <div class="column"><a href="#"><i class="fas fa-search"></i></a></div> -->
-
+         
         </div>
-        <hr class="hr-header">
+      </div>
+      </header>
+      <div style="margin-bottom: 6em;"></div> -->
+<nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation"
+  style="z-index: 100;border-bottom: 1px solid #eee; ">
+  <div class="container">
+    <div class="navbar-brand">
 
+
+      <a role="button" class="navbar-burger burger {% if page.toc == true %}is-active{% endif %}" aria-label="menu" aria-expanded="false"
+        data-target="navbarBasicExample">
+        <span class="is-hidden-desktop" aria-hidden="true"></span>
+        <span class="is-hidden-desktop" aria-hidden="true"></span>
+        <span class="is-hidden-desktop" aria-hidden="true"></span>
+      </a>
+    </span>
+
+      <!-- <a class="navbar-item" href="/">
+        <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
+      </a> -->
+
+      <div class="logo is-size-4" style="display: inline-block">
+          <a class="navbar-item" href="/" >mildronize</a>
+        </div>
+
+      <div class="navbar-end" style="margin-left: auto;">
+        <!-- <div id="navbarBasicExample" class="navbar-menu">
+          <a class="navbar-item">
+            Documentation
+          </a>
+        </div> -->
+
+        <div class="navbar-item is-hidden-desktop">
+          <div class="buttons">
+            <a class="button is-light" href="/search">
+                <i class="fas fa-search 2x"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+
+
+    </div>
+    <div id="navbarBasicExample" class="navbar-menu">
+
+      <div class="navbar-end">
+
+          {% assign pages_list = site.pages %}
+              {% for node in pages_list %}
+                {% if node.title != null %}
+                  {% if node.add_menu != null %}
+                  <div class="navbar-item">
+                   <a class="button is-white" href="{{ site.baseurl }}{{ node.url }}">{{ node.title | downcase  }}</a>
+                  </div>
+                  {% endif %}
+                {% endif %}
+              {% endfor %}
+
+        <div class="navbar-item">
+          <div class="buttons">
+            <a class="button is-light" href="/search">
+                <i class="fas fa-search 2x"></i>
+            </a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <!-- <div class="navbar-end" style="">
+        <div class="navbar-item is-hidden-mobile ">
+          <div class="buttons">
+            <a class="button is-light">
+              Search
+            </a>
+          </div>
+        </div>
+      </div>
+  -->
   </div>
+</nav>
 
+<div style="margin-bottom: 5rem"></div>
