--- a/src/_layouts/page.html
+++ b/src/_layouts/page.html
@@ -3,10 +3,18 @@ layout: default
 ---
 
 <div class="page-container">
-
-    <div class="content">
-      <div class="page">
-        {{ content }}
+  <div class="columns">
+    <div class="sidebar-main">
+      <div class="column is-narrow ">
+        {% include sidebar.html %}
       </div>
     </div>
+    <div class="column">
+      <div class="content">
+        <div class="page">
+          {{ content }}
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
