--- a/src/_sass/_bulma_preload.scss
+++ b/src/_sass/_bulma_preload.scss
@@ -8,6 +8,7 @@
 // @import "bulma/elements/container.sass";
 @import "bulma/elements/content.sass";
 @import "bulma/elements/button.sass";
+@import "bulma/elements/tag.sass";
 @import "bulma/components/card";
 @import "bulma/components/navbar";
 
