--- a/src/_includes/sidebar.html
+++ b/src/_includes/sidebar.html
@@ -1,11 +1,14 @@
 <div class="sidebar">
   <div class="sidebar-menu is-hidden-desktop">
+      <a href="/" >
+        home
+      </a>
     {% assign pages_list = site.pages %}
     {% for node in pages_list %}
     {% if node.title != null %}
     {% if node.add_menu != null %}
 
-    <a class="" href="{{ site.baseurl }}{{ node.url }}">{{ node.title | downcase  }}</a>
+    <a href="{{ site.baseurl }}{{ node.url }}">{{ node.title | downcase  }}</a>
     {% endif %}
     {% endif %}
     {% endfor %}
@@ -17,12 +20,12 @@
   </div>
   {% endif %}
 </div>
-
+</div>
 
 <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
 <script>
-
+  // <pre>
   $(document).ready(function () {
 
     // Check for click events on the navbar burger icon
@@ -30,19 +33,24 @@
     $(".navbar-burger").click(function () {
 
       // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
-      $(".sidebar-main").toggleClass("is-active");
+      $(".sidebar").toggleClass("is-active");
       $(".navbar-burger").toggleClass("is-active");
 
     });
 
     $(".sidebar-toc ul li a").click(function () {
       if ($(window).width() < 970) {
-        $(".sidebar-main").toggleClass("is-active");
+        $(".sidebar").toggleClass("is-active");
+        $(".navbar-burger").removeClass("is-active");
+      }
+    });
+
+    if ($(window).width() < 970) {
+        $(".sidebar").removeClass("is-active");
         $(".navbar-burger").removeClass("is-active");
       }
 
-    });
   });
 
-
+// </pre>
 </script>
